[package]
name = "hex_globe"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.0", features = ["dynamic_linking"] }
bevy_panorbit_camera = "0.32.0"
rand = "0.9.2"
subsphere = "0.7.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[package.metadata.bevy_lint]
pedantic = "warn"
